# SR_Exam

./: README.md  package-lock.json  package.json
analysis-diagrams/: SR Exam.vpp  SR Exam.vpp.bak_000f  SR Exam.vpp.bak_001d  SR Exam.vpp.bak_002d  SR Exam.vpp.bak_003d  SR Exam.vpp.bak_004d  SR Exam.vpp.bak_005d  SR Exam.vpp.bak_006d  SR Exam.vpp.bak_007d  SR Exam.vpp.bak_008d  SR Exam.vpp.bak_009d  SR Exam.vpp.bak_010d  SR Exam.vpp.bak_011d  SR Exam.vpp.bak_012d  SR Exam.vpp.bak_013d  SR Exam.vpp.bak_014d  SR Exam.vpp.bak_015d  SR Exam.vpp.bak_016d  SR Exam.vpp.bak_017d  SR Exam.vpp.bak_018d  SR Exam.vpp.bak_019d  SR Exam.vpp.bak_020d  SR Exam.vpp.bak_021d  SR Exam.vpp.bak_022d  SR Exam.vpp.bak_023d  SR Exam.vpp.bak_024d  SR Exam.vpp.bak_025d  SR Exam.vpp.bak_026d  SR Exam.vpp.bak_027d  SR Exam.vpp.bak_028d  SR Exam.vpp.bak_029d  SR Exam.vpp.bak_030d  SR Exam.vpp.bak_031f  SR Exam.vpp.bak_032d  SR Exam.vpp.bak_033d  SR Exam.vpp.bak_034d  SR Exam.vpp.bak_035d  SR Exam.vpp.bak_036d  SR Exam.vpp.bak_037d  SR Exam.vpp.bak_038d  (+34 more)
src/: main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/schemas/: sr-exam.graphql
src-tauri/src/: main.rs
src/components/: NavbarComponent.tsx  specification.ts
src/css/: LoginPage.css  ProfilePage.css
src/model/: Enrollment.d.ts  Room.d.ts  ScheduledRoom.d.ts  Shift.d.ts  Subject.d.ts  User.d.ts  ViewTransaction.d.ts
src/routes/: AssistantExamSchedulerPage.tsx  HomePage.tsx  HomePageStudent.tsx  LoginPage.tsx  ProfilePage.tsx  ReportManagementPage.tsx  RoomManagementPage.tsx  StudentExamSchedulerPage.tsx  (+4 more)
